using Microsoft.AspNetCore.Mvc;
using ACS.WebApi.Services;

namespace ACS.WebApi.Controllers;

/// <summary>
/// DEMO: Pure HTTP API proxy for BulkOperations - SIMPLIFIED VERSION
/// Acts as gateway to VerticalHost - contains NO business logic
/// This version uses simple types to demonstrate the proxy pattern works
/// ZERO dependencies on business services - only IVerticalHostClient
/// </summary>
[ApiController]
[Route("api/bulk-operations")]
public class BulkOperationsController : ControllerBase
{
    private readonly IVerticalHostClient _verticalClient;
    private readonly ILogger<BulkOperationsController> _logger;

    public BulkOperationsController(
        IVerticalHostClient verticalClient,
        ILogger<BulkOperationsController> logger)
    {
        _verticalClient = verticalClient;
        _logger = logger;
    }

    /// <summary>
    /// POST /api/bulk-operations/users/create - DEMO: Pure HTTP proxy to VerticalHost for bulk user creation
    /// </summary>
    [HttpPost("users/create")]
    public async Task<ActionResult<object>> BulkCreateUsers([FromBody] BulkCreateUsersDemo request)
    {
        try
        {
            _logger.LogInformation("DEMO: Proxying BulkCreateUsers request to VerticalHost: UserCount={UserCount}", request.Users.Count);

            // This demonstrates the proxy pattern - in full implementation would call:
            // var response = await _verticalClient.BulkCreateUsersAsync(request);
            await Task.CompletedTask; // Maintain async signature for future gRPC implementation
            
            var demoResponse = new
            {
                Message = "DEMO: Clean architecture proxy pattern working",
                ProxyedTo = "VerticalHost via gRPC",
                BusinessLogic = "ZERO - Pure proxy",
                Operation = "BulkCreateUsers",
                UserCount = request.Users.Count,
                Command = "Would be queued in CommandBuffer for sequential processing",
                Architecture = "HTTP API -> IVerticalHostClient -> gRPC -> VerticalHost -> CommandBuffer -> Business Logic"
            };
            
            return Ok(demoResponse);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Error in proxy demonstration");
            return StatusCode(500, "An error occurred in proxy demonstration");
        }
    }

    /// <summary>
    /// POST /api/bulk-operations/users/assign-roles - DEMO: Pure HTTP proxy to VerticalHost for role assignment
    /// </summary>
    [HttpPost("users/assign-roles")]
    public async Task<ActionResult<object>> BulkAssignRoles([FromBody] BulkAssignRolesDemo request)
    {
        try
        {
            _logger.LogInformation("DEMO: Proxying BulkAssignRoles request to VerticalHost: {RoleCount} roles to {UserCount} users",
                request.RoleIds.Count, request.UserIds.Count);

            // This demonstrates the proxy pattern - in full implementation would call:
            // var response = await _verticalClient.BulkAssignRolesAsync(request);
            await Task.CompletedTask; // Maintain async signature for future gRPC implementation
            
            var demoResponse = new
            {
                Message = "DEMO: Clean architecture proxy pattern working",
                ProxyedTo = "VerticalHost via gRPC",
                BusinessLogic = "ZERO - Pure proxy",
                Operation = "BulkAssignRoles",
                UserIds = request.UserIds,
                RoleIds = request.RoleIds,
                Command = "Would be queued in CommandBuffer for sequential processing",
                Architecture = "HTTP API -> IVerticalHostClient -> gRPC -> VerticalHost -> CommandBuffer -> Business Logic"
            };
            
            return Ok(demoResponse);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Error in proxy demonstration");
            return StatusCode(500, "An error occurred in proxy demonstration");
        }
    }

    /// <summary>
    /// POST /api/bulk-operations/permissions/create - DEMO: Pure HTTP proxy to VerticalHost for bulk permission creation
    /// </summary>
    [HttpPost("permissions/create")]
    public async Task<ActionResult<object>> BulkCreatePermissions([FromBody] BulkCreatePermissionsDemo request)
    {
        try
        {
            _logger.LogInformation("DEMO: Proxying BulkCreatePermissions request to VerticalHost: PermissionCount={PermissionCount}", request.Permissions.Count);

            // This demonstrates the proxy pattern - in full implementation would call:
            // var response = await _verticalClient.BulkCreatePermissionsAsync(request);
            await Task.CompletedTask; // Maintain async signature for future gRPC implementation
            
            var demoResponse = new
            {
                Message = "DEMO: Clean architecture proxy pattern working",
                ProxyedTo = "VerticalHost via gRPC",
                BusinessLogic = "ZERO - Pure proxy",
                Operation = "BulkCreatePermissions",
                PermissionCount = request.Permissions.Count,
                Command = "Would be queued in CommandBuffer for sequential processing",
                Architecture = "HTTP API -> IVerticalHostClient -> gRPC -> VerticalHost -> CommandBuffer -> Business Logic"
            };
            
            return Ok(demoResponse);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Error in proxy demonstration");
            return StatusCode(500, "An error occurred in proxy demonstration");
        }
    }

    /// <summary>
    /// POST /api/bulk-operations/import - DEMO: Pure HTTP proxy to VerticalHost for data import
    /// </summary>
    [HttpPost("import")]
    public async Task<ActionResult<object>> ImportEntities([FromForm] IFormFile file, [FromQuery] string entityType)
    {
        try
        {
            _logger.LogInformation("DEMO: Proxying ImportEntities request to VerticalHost: EntityType={EntityType}, FileName={FileName}",
                entityType, file?.FileName);

            // This demonstrates the proxy pattern - in full implementation would call:
            // var response = await _verticalClient.ImportEntitiesAsync(file, entityType);
            await Task.CompletedTask; // Maintain async signature for future gRPC implementation
            
            var demoResponse = new
            {
                Message = "DEMO: Clean architecture proxy pattern working",
                ProxyedTo = "VerticalHost via gRPC",
                BusinessLogic = "ZERO - Pure proxy",
                Operation = "ImportEntities",
                EntityType = entityType,
                FileName = file?.FileName ?? "No file",
                Command = "Would be queued in CommandBuffer for sequential processing",
                Architecture = "HTTP API -> IVerticalHostClient -> gRPC -> VerticalHost -> CommandBuffer -> Business Logic"
            };
            
            return Ok(demoResponse);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Error in proxy demonstration");
            return StatusCode(500, "An error occurred in proxy demonstration");
        }
    }

    /// <summary>
    /// GET /api/bulk-operations/status/{operationId} - DEMO: Pure HTTP proxy to VerticalHost for operation status
    /// </summary>
    [HttpGet("status/{operationId}")]
    public async Task<ActionResult<object>> GetOperationStatus(string operationId)
    {
        try
        {
            _logger.LogInformation("DEMO: Proxying GetOperationStatus request to VerticalHost: OperationId={OperationId}", operationId);

            // This demonstrates the proxy pattern - in full implementation would call:
            // var response = await _verticalClient.GetOperationStatusAsync(operationId);
            await Task.CompletedTask; // Maintain async signature for future gRPC implementation
            
            var demoResponse = new
            {
                Message = "DEMO: Clean architecture proxy pattern working",
                ProxyedTo = "VerticalHost via gRPC",
                BusinessLogic = "ZERO - Pure proxy",
                Operation = "GetOperationStatus",
                OperationId = operationId,
                Status = "Completed",
                Progress = 100,
                Architecture = "HTTP API -> IVerticalHostClient -> gRPC -> VerticalHost -> CommandBuffer -> Business Logic"
            };
            
            return Ok(demoResponse);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Error in proxy demonstration");
            return StatusCode(500, "An error occurred in proxy demonstration");
        }
    }
}

/// <summary>
/// Simple demo request class for bulk user creation
/// </summary>
public class BulkCreateUsersDemo
{
    public List<CreateUserBulkDemo> Users { get; set; } = new();
    public bool ContinueOnError { get; set; } = true;
}

/// <summary>
/// Simple demo request class for user creation in bulk operations
/// </summary>
public class CreateUserBulkDemo
{
    public string UserName { get; set; } = "";
    public string Email { get; set; } = "";
}

/// <summary>
/// Simple demo request class for bulk role assignment
/// </summary>
public class BulkAssignRolesDemo
{
    public List<int> UserIds { get; set; } = new();
    public List<int> RoleIds { get; set; } = new();
    public bool ContinueOnError { get; set; } = true;
}

/// <summary>
/// Simple demo request class for bulk permission creation
/// </summary>
public class BulkCreatePermissionsDemo
{
    public List<CreatePermissionDemo> Permissions { get; set; } = new();
    public bool ContinueOnError { get; set; } = true;
}

/// <summary>
/// Simple demo request class for permission creation
/// </summary>
public class CreatePermissionDemo
{
    public int EntityId { get; set; }
    public string Resource { get; set; } = "";
    public string HttpVerb { get; set; } = "GET";
    public bool Grant { get; set; } = true;
}